--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "pinia": "^2.0.36",
     "vue": "^3.3.2",
-    "vue-router": "^4.2.0"
+    "vue-router": "^4.2.0",
+    "vue-the-mask": "^0.11.1"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.2.0",
