--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "maska": "^2.1.9",
     "pinia": "^2.0.36",
     "vue": "^3.3.2",
-    "vue-router": "^4.2.0",
-    "vue-the-mask": "^0.11.1"
+    "vue-router": "^4.2.0"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.2.0",
