--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "sass": "^1.62.1",
     "typescript": "~5.0.4",
     "vite": "^4.3.5",
+    "vite-plugin-pwa": "^0.16.5",
     "vitest": "^0.31.0",
     "vue-tsc": "^1.6.4"
   }
